# autolib_refactor

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AutolibDockerfile  Dockerfile  README.md  Ubuntu1804Dockerfile  Ubuntu2004Dockerfile  autotest.py  autotest.spec  build_binary.sh  changelog.md  docker-compose.yml  env_field_description.yaml  nohup.out  pyproject.toml  regtest.py  requirements.txt  version
docs/: AUTOLIB_V3_WORKFLOW.md  COMPILER_ARCHITECTURE_COMPARISON.md  COMPILER_DEEP_DIVE.md  COMPONENT_REUSABILITY_GUIDE.md  DEVICE_CONFIGURATION.md  DSL_COMPILATION_FLOW.md  DSL_TO_EXECUTION_EXAMPLE.md  DSL_TO_PYTEST_MIGRATION.md  DSL_USAGE_GUIDE.md  EXECUTOR_DEEP_DIVE.md  GETTING_STARTED.md  INCLUDE_DIRECTIVE.md  ORIOLE_INTEGRATION.md  PYTHON_BASED_TESTING_FRAMEWORK.md  QUICK_REFERENCE.md  README.md  SOFTWARE_ARCHITECTURE_DESIGN_PATTERNS.md  TRANSPILER_EXAMPLE.md  TROUBLESHOOTING_ORIOLE.md  VARIABLE_USAGE_AND_TROUBLESHOOTING.md
examples/exec_code/: README.md  example_parser.py  example_script.sh
lib/: __init__.py  settings.py
lib/core/: __init__.py
lib/services/: __init__.py  _summary.py  env_parser.py  environment.py  image_server.py  log.py  output.py  path_utils.py  (+5 more)
old_testcase_v1/: svn-commit.tmp
plugins/: README.md
prototype/: ARCHITECTURE_DECISION_CONTROL_FLOW.md  CHANGELOG.md  DECORATOR_IMPLEMENTATION_SUMMARY.md  DECORATOR_VARIABLE_RESOLUTION.md  DSL_TO_PYTEST_CONVERSION_GUIDE.md  ENVIRONMENT_INTEGRATION.md  ENV_INTEGRATION_GUIDE.md  ENV_INTEGRATION_SUMMARY.md  FLEXIBLE_DEVICE_ARCHITECTURE.md  FLUENT_API_EXECUTOR_INTEGRATION.md  GROUP_FILE_GUIDE.md  GROUP_FILE_QUICK_REF.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_PROCESS_GUIDE.md  MOCK_DEVICE_ARCHITECTURE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PROTOTYPE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_TRANSPILER.md  TRANSPILER_USAGE.md  VERIFICATION_RESULTS.md  compare_formats.py  debug_env_keys.py  demo_device_modes.py  run_transpiler.py  run_transpiler_v1.py  test_decorator_resolution.py  test_full_integration.sh  test_mock_factory.py  test_variable_resolution.py  verify_refactored.py
tools/: extract_archive.py
(+613 files in other folders)
